docs: fix api paths, add version v1 to api
